fixing UI alignment issues

--- a/src/app.scss
+++ b/src/app.scss
@@ -105,6 +105,10 @@ ul {
     overflow-x: hidden;
     overflow-y: auto;
     width: 100vw;
+
+    @media (min-width: 768px) {
+        width: 78vw;
+    }
 }
 .parallax__layer {
     position: absolute;
@@ -118,6 +122,11 @@ ul {
     position: relative;
     height: 100vh;
     transform-style: preserve-3d;
+    margin-left: 6em;
+
+    @media (min-width: 768px) {
+        margin-left: 0;
+    }
 }
 
 .parallax__layer--fore {
