--- a/src/components/about/about.scss
+++ b/src/components/about/about.scss
@@ -12,7 +12,7 @@ about {
     line-height: 1.2;
     color: white;
     text-align: center;
-    font-size: 1.8em;
+    font-size: 1.7em;
 }
 
 @media (min-width: 991px) {
@@ -24,7 +24,7 @@ about {
 .about .intro p {
     white-space: nowrap;
     overflow: hidden;
-    width: 17em;
+    width: 16em;
     animation: type 3s steps(60, end);
 }
 
