--- a/src/components/projects/projects.scss
+++ b/src/components/projects/projects.scss
@@ -3,9 +3,6 @@
     font-size: 1.2em;
     color: white;
 
-    .projects-container {
-        width: calc(100% - 5em);
-    }
 
     .fa {
         font-size: 1.5em;
@@ -19,6 +16,7 @@
     .title {
         color: coral;
         text-align: center;
+        padding-top: 1.5em;
     }
 
     .coral {
